
Wed Apr 26 22:12:26 1995  Chris Provenzano (proven@mit.edu)

	* server.c, client.c : Use krb5_auth_con_genaddrs() instead of
		krb5_auth_con_setaddrs().

Mon Mar 27 07:56:26 11995 Chris Provenzano (proven@mit.edu)

        * server.c: Use new calling conventions for krb5_sendauth(),
		krb5_mk_req_extended(), and krb5_mk_safe().

        * server.c: Use new calling conventions for krb5_recvauth(),
		krb5_rd_req(), and krb5_rd_safe().

Thu Mar  2 12:28:58 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 16:26:20 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 01:51:29 1995  John Gilmore  (gnu at toad.com)

	* client.c, server.c:  Avoid <krb5/...> and <com_err.h> includes.

Tue Feb 14 15:30:55 1995 Chris Provenzano  (proven@mit.edu)

        * client.c Call krb5_get_credentials() with new calling convention.

        * server.c Call krb5_mk_req_extended() with new calling convention.

Fri Feb  3 11:58:18 1995  Theodore Y. Ts'o  (tytso@dcl)

	* client.c: (tgt_keyproc): Add keytype argument to rd_req_proc.

Wed Jan 25 16:54:40 1995  Chris Provenzano (proven@mit.edu)

        * Removed all narrow types and references to wide.h and narrow.h

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Tue Oct  4 17:12:52 1994  Theodore Y. Ts'o  (tytso@dcl)

	* client.c (tgt_keyproc): Add widen.h and narrow.h around
		declaration so that argument types are widened.

Thu Sep 29 22:48:20 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Relink executable when libraries change

Wed Sep 14 21:47:00 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Fixed stupid typo (uusrever) in the install target.